<resources>
    <!-- TODO: start API path -->
    <string name="path_api_sign_up">api/sign/up</string>
    <string name="path_api_sign_verify">api/sign/verify</string>
    <string name="path_api_sign_out">api/sign/out</string>
    <!-- TODO: end API path -->

    <string name="app_name">RRNet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings related to login -->
    <string name="prompt_mobile">Mobile</string>
    <string name="prompt_verification">Verification</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_mobile">Not a valid username</string>
    <string name="invalid_verification">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_login">Login</string>
    <string name="action_verify">Verify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_otp_mobile">Mobile</string>
    <string name="title_otp_verification">Verification</string>
    <string name="message_mobile_number_cannot_empty">Mobile number cannot be empty</string>
    <string name="message_invalid_mobile_number">Invalid mobile number</string>
    <string name="x2731">✱</string>
    <string name="message_otp_error">OTP Verification box cannot be empty…</string>
    <string name="otp1"><![CDATA[<font color="#a3a3a3">Enter OTP send to </font> <font color="#000000">+91-9876-564-656</font>]]></string>
</resources>