<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="net.coblos.rrnet.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="net.coblos.rrnet.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="net.coblos.rrnet.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_otp_mobile"
        android:name="net.coblos.rrnet.ui.otp.OtpFragmentMobile"
        android:label="@string/title_otp_mobile"
        tools:layout="@layout/fragment_otp_mobile">
        <action
            android:id="@+id/action_fragmentOtpMobile_to_fragmentOtpVerification"
            app:destination="@id/navigation_otp_verification"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_otp_verification"
        android:name="net.coblos.rrnet.ui.otp.OtpFragmentVerification"
        android:label="@string/title_otp_verification"
        tools:layout="@layout/fragment_otp_verification"/>


</navigation>